--- a/module-2-solution/index.html
+++ b/module-2-solution/index.html
@@ -1,9 +1,44 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Hola!</title>
-</head>
-<body>
-<h1>Hola!</h1>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="css/styles.css">
+		<title>Assignment Solution for Module 2</title>
+	</head>
+	<body>
+		<h1>Our Menu</h1>
+		<div class="row">
+			<div class="container col-lg-4 col-md-6 col-sm-12">
+				<section>
+					<div id="chicken">
+						Chicken
+					</div>
+					<p>
+						Lorem fistrum papaar papaar tempor a gramenawer tiene musho peligro ut aliquip dolore minim sexuarl. Elit aliqua te voy a borrar el cerito diodeno la caidita incididunt cillum adipisicing ut labore cillum. Elit voluptate condemor amatomaa diodeno esse. Minim ahorarr torpedo a wan nostrud.
+					</p>
+				</section>
+			</div>
+			<div class="container col-lg-4 col-md-6 col-sm-12">
+				<section>
+					<div id="beef">
+						Beef
+					</div>
+					<p>
+						Lorem fistrum papaar papaar tempor a gramenawer tiene musho peligro ut aliquip dolore minim sexuarl. Elit aliqua te voy a borrar el cerito diodeno la caidita incididunt cillum adipisicing ut labore cillum. Elit voluptate condemor amatomaa diodeno esse. Minim ahorarr torpedo a wan nostrud. 
+					</p>
+				</section>
+			</div>
+			<div class="container col-lg-4 col-md-12 col-sm-12">
+				<section>
+					<div id="sushi">
+						Sushi
+					</div>
+					<p>
+						Lorem fistrum papaar papaar tempor a gramenawer tiene musho peligro ut aliquip dolore minim sexuarl. Elit aliqua te voy a borrar el cerito diodeno la caidita incididunt cillum adipisicing ut labore cillum. Elit voluptate condemor amatomaa diodeno esse. Minim ahorarr torpedo a wan nostrud. 
+					</p>
+				</section>
+			</div>
+		</div>
+	</body>
 </html>
